# Marcelle

./: .gitattributes  .gitignore  2025_10_21_DITP.csv  HCI proposal.tex  class_camembert-base-xnli_B16.csv  class_deberta-v3-large-zeroshot-v2.0_B16.csv  class_xlm-roberta-large-xnli_B16.csv  command_for_detached_execution.sh  deberta.xlsx  emotion_classi_comp.py  pyproject.toml  requirements.txt  temps_execution.csv
Resultats/: camembert.xlsx  deberta.xlsx  roberta.xlsx  times.csv
Resultats/V3/: camembert.xlsx  deberta.xlsx  roberta.xlsx  times.csv
