[project]
name = "marcelle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "et-xmlfile==2.0.0",
    "filelock==3.19.1",
    "fsspec==2025.9.0",
    "hf-xet==1.1.10",
    "huggingface-hub==0.35.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.3.3",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.2",
    "pandas-stubs==2.3.2.250827",
    "pillow==11.3.0",
    "protobuf>=6.33.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "sentencepiece>=0.2.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "tiktoken>=0.12.0",
    "tokenizers==0.22.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "transformers==4.56.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
